<resources>
    <string name="preproduzione.oauth.consumer.key">EU7lu14bnWGqnJTbh8Sq</string>
    <string name="preproduzione.oauth.consumer.secret">IvnvPVeZCWOJ3qBS03GYMubjrNJ77XPp3o72IAKU</string>
    <string name="preproduzione.oauth.jam.login.url">https://jam12.sapjam.com/auth/status?companyId=aceaspaT1&amp;idp=hcm12preview.sapsf.eu</string>
    <string name="preproduzione.smp.url">swfmmobilepp.aceaspa.it</string>
    <string name="preproduzione">PREPRODUZIONE</string>
    <string name="produzione.oauth.consumer.key">rZTdavOulKbYb8eNvFeL</string>
    <string name="produzione.oauth.consumer.secret">qGVVMuvLPzdHJPEaX0aics9nASDglpL20uOfWjzY</string>
    <string name="produzione.oauth.jam.login.url">https://jam12.sapjam.com/auth/status?companyId=aceaspaP&amp;idp=performancemanager5.successfactors.eu</string>
    <string name="produzione.smp.url">swfmmobile.aceaspa.it</string>
    <string name="produzione">PRODUZIONE</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nec odio viverra lectus consequat sollicitudin at ac tellus. Integer id condimentum eros. Vivamus congue luctus leo, a pulvinar sem eleifend sed. Curabitur eu tortor mi. Suspendisse dignissim purus at libero cursus iaculis. Mauris vulputate a libero ut vestibulum. Sed turpis augue, imperdiet ac eleifend non, feugiat id tellus.</string>
    <string name="app_confirm_exit">Premere ancora per uscire</string>
    <string name="loading">Caricamento in corso. \nAttendere prego</string>
    <string name="label_menu_home">Home</string>
    <string name="label_menu_group">Gruppi</string>
    <string name="label_menu_ess">Ess</string>
    <string name="label_menu_wmanager">Work Manager</string>
    <string name="label_menu_contacts">Contatti</string>
    <string name="label_menu_profile">Il mio profilo</string>
    <string name="label_menu_settings">Preferenze</string>
    <string name="label_menu_search">Cerca</string>
    <string name="label_menu_notify">Notifiche del sistema</string>
    <string name="label_menu_inbox">Messaggi privati</string>
    <string name="label_menu_chat">Chat</string>
    <string name="operation_not_active">Funzionalita\' non attiva!</string>
    <string name="label_menu_logout">Esci</string>
    <string name="label_menu_last_update">Ultimo aggiornamento effettuato \n%1$s</string>
    <string name="tab_mywork">Il mio lavoro</string>
    <string name="tab_update">aggiornamenti</string>
    <string name="mywork_plant_user_type">Ruolo Utenza</string>
    <string name="mywork_plant_location">Ubicazione</string>
    <string name="mywork_customer_id">Cliente: %1s</string>
    <string name="odl_customer_payment">Quadro amm.</string>
    <string name="odl_customer_terms">Esigenze Speciali</string>
    <string name="action_settings">Preferenze</string>
    <string name="pref_header_general">Generali</string>
    <string name="pref_title_logout">Esci dall\'applicazione</string>
    <string name="pref_description_logout">
        Effettuando il logout tutti i dati utente verranno cancellati dal dispositivo.
        \nPuoi recuperarli rieffettuando la procedura di accesso.
    </string>
    <string name="pref_title_privacy">Privacy</string>
    <string name="pref_description_privacy">
        Informazioni al consenso ed al trattamento dei dati personali da parte Acea
        sotto e per gli effetti degli articoli della legge.
    </string>
    <string name="preference_logout_popup_title">Attenzione!</string>
    <string name="preference_logout_popup_message">
        <![CDATA[
        Siete sicuri di effettuare il logout dall\'applicazione? Tutti i dati saranno cancellati.
        ]]>
    </string>
    <string name="pref_header_user">Impostazioni utente</string>
    <string name="pref_title_version">Versione</string>
    <string name="pref_header_notifications">Notifiche</string>
    <string name="pref_title_notifications">Ricevi le notifiche</string>
    <string name="pref_message_notifications">
        Rimani aggiornato sulle novita\' e sulle nostre iniziative.
        \nAttivando le notifiche potrai ricevere suggerimenti, notizie e altro
    </string>
    <string name="pref_header_info">Informazioni</string>
    <string name="preference_library">Librerie utilizzate</string>
    <string name="preference_summary">
    <![CDATA[
        SocialWFM utilizza librerie sviluppate dalla community Android.
        \nSi ringrazia tutti per il contributo.
    ]]>
    </string>
    <string name="tutorial_title">Rivedi il tutorial</string>
    <string name="tutorial_summary">Rivedi il tutorial e scopri come SocialWFM può aiutarti</string>
    <string name="precip_label">Precip: %1s{met-celcius}</string>
    <string name="umid_label">Umidita\': %1s{met-celcius}</string>
    <string name="wind_label">Vento: %1s Km/h</string>
    <string name="temp_label">%1s{met-celcius}</string>
    <string name="notifiche">Notifiche</string>
    <string name="find_verify_code">codice di verifica</string>
    <string name="error_message_notification">Non è possibile eliminare tutti i filtri</string>
    <string name="anni_fa">%d anni</string>
    <string name="anno_fa">%d anno</string>
    <string name="mesi_fa">%d mesi</string>
    <string name="mese_fa">%d mese</string>
    <string name="settimane_fa">%d settimane</string>
    <string name="settimana_fa">%d settimana</string>
    <string name="giorni_fa">%d giorni</string>
    <string name="giorno_fa">%d giorno</string>
    <string name="ore_fa">%d ore</string>
    <string name="ora_fa">%d ora</string>
    <string name="minuti_fa">%d minuti</string>
    <string name="minuto_fa">%d minuto</string>
    <string name="secondi_fa">%d secondi</string>
    <string name="secondo_fa">%d secondo</string>
    <string name="un_attimo_fa">un attimo</string>
    <string name="starred_label">Preferiti</string>
    <string name="all_label">Tutti</string>
    <string name="filter_search">Filtra tra gli utenti</string>
    <string name="followers_profile">Ti seguono %d colleghi</string>
    <string name="following_profile">Segui %d colleghi</string>
    <string name="empty_label">Impossibile recuperare i dati!</string>
    <string name="post_message">Stai postando un aggiornamento\nAttendere&#8230;</string>
    <string name="group_number">%d membri</string>
    <string name="condcontr_label">Cond. Contrattuali</string>
    <string name="term_special_label">Esigenze speciali</string>
    <string name="sede_tec_label">Sede tecnica %1s</string>
    <string name="impianto_label">Impianto %1s</string>
    <string name="plant_macrocat_label">Macrocategoria</string>
    <string name="plant_codice_label">Codice Impianto</string>
    <string name="plant_tec_label">Definizione Sede tecnica</string>
    <string name="plant_desc_label">Descrizione apparecchiatura</string>
    <string name="tech_fanghi">Fanghi</string>
    <string name="tech_clorazione">Clorazione</string>
    <string name="tech_sost_chimiche">Sostanze Chimiche</string>
    <string name="tech_elettrico">Quadro Elettrico</string>
    <string name="tech_componenti">Comp. Elettromeccanici</string>
    <string name="tech_video">Video Sorveglianza</string>
    <string name="groups">Gruppi</string>
    <string name="search_hint">Cerca su Acea Social WFM</string>
    <string name="funzione_non_attiva">Funzione non attiva</string>
    <string name="impianto">Impianto</string>
    <string name="cliente">Cliente</string>
    <string name="filter_search_group">Filtra tra i gruppi</string>
    <string name="campo_richiesto">Questo campo non può essere lasciato vuoto</string>
    <string name="new_group_message">Stai creando un gruppo\nAttendere&#8230;</string>
    <string name="detail_plant_label">Dettagli Sito</string>
    <string name="zone">zona/frazione</string>
    <string name="disp_agg_label">Disposizioni aggiuntive</string>
    <string name="contract_label">Contratto</string>
    <string name="tip_contract_label">Tipologia contratto</string>
    <string name="cod_contract_label">Codice contratto</string>
    <string name="role_user_label">Ruolo Utenza</string>
    <string name="name_label">Nome</string>
    <string name="phone_label">Telefono fisso</string>
    <string name="phone_mobile_label">Telefono cellulare</string>
    <string name="fax_label">Fax</string>
    <string name="role_label">Ruolo</string>
    <string name="mail_label">Mail</string>
    <string name="address_label">Indirizzo</string>
    <string name="action_login">Devi effettuare il login per visualizzare la lista ordini</string>
    <string name="custom_empty_label">Dati cliente non disponibili</string>
    <string name="plant_label_is_misto">Impianto Misto</string>
    <string name="account_summary_wfm">Inserisci la tua utenza wfm</string>
    <string name="account_title_wfm">Account Utente</string>
    <string name="customer_tariffa_label">Tariffa</string>
    <string name="importo_moroso_label">Importo moroso</string>
    <string name="importo_scaduto_label">Importo scaduto</string>
    <string name="ruolo_utenza_label">Ruolo utenza</string>
    <string name="bp_label">Business partner</string>
    <string name="tipologia_label">Tipologia</string>
    <string name="zone_label">Zona</string>
    <string name="piano_label">Piano</string>
    <string name="ubicazione_label">Ubicazione</string>
    <string name="interno_label">Interno</string>
    <string name="scala_label">Scala</string>
    <string name="close">Chiudi</string>
    <string name="dialog_empthy_c">Impossibile caricare i dati, controlla la tua connessione</string>
    <string name="dialog_empthy_m">Errore</string>
    <string name="login_to_system">Accedi al sistema</string>
    <string name="label_username">Username</string>
    <string name="label_pwd">Password</string>
    <string name="error_message_login">Username e/o password errati! Inserire le proprie credenziali di dominio ACEA ed assicurarsi che non siano scadute</string>
    <string name="error_message_network">Attenzione! Controllare la propria connessione di rete</string>
    <string name="monte_ore">Monte ore</string>
    <string name="data">Data</string>
    <string name="inizio_riduzione">Inizio riduzione</string>
    <string name="fine_riduzione">Fine riduzione</string>
    <string name="pianificato">Pianificato</string>
    <string name="goduto">Goduto</string>
    <string name="legenda">Legenda</string>
    <string name="legenda_assenza">Assenza</string>
    <string name="legenda_assente">Assente</string>
    <string name="legenda_festivo">Festivo</string>
    <string name="legenda_errore">Errore</string>
    <string name="legenda_correzione">Correzione</string>
    <string name="legenda_al_lavoro">Al lavoro</string>
    <string name="legenda_giorno_non_lavorativo">Giorno non lavorativo</string>
    <string name="legenda_inviato">Inviato</string>
    <string name="legenda_canc_richiesto">Canc. Richiesto</string>
    <string name="legenda_piu_inserimenti">Più inserimenti</string>
    <string name="giustificativo">Giustificativo:</string>
    <string name="cartellino_orologio">Cartellino orologio</string>
    <string name="timbrature">Timbrature</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="ordina">Ordina</string>
    <string name="messaggi">Messaggi</string>
    <string name="quadratura_tipo">Tipo messaggio</string>
    <string name="periodo">Periodo</string>
    <string name="quadratura_messaggio">Messaggio</string>
    <string name="quadratura_cid">C.I.D.</string>
    <string name="quadratura_nome_dipendente">Nome dipendente/cand</string>
    <string name="quadratura_nome_data">Data</string>
    <string name="duadratura">Quadratura</string>
    <string name="reperibilita">Reperibilità</string>
    <string name="export_pdf">Esporta PDF</string>
    <string name="export_excel">Esporta EXCEL</string>
    <string name="cedolino">Cedolino</string>
    <string name="label_menu_concorsi">Concorsi</string>
    <string name="label_jabber">jabber</string>
</resources>