<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.jenzz.materialpreference.PreferenceCategory
        android:icon="@android:drawable/ic_dialog_info"
        android:summary="Gestisci i tuoi dati in tutta tranquillita"
        android:title="@string/pref_header_general">

        <com.jenzz.materialpreference.Preference
            android:key="privacy_policy"
            android:summary="@string/pref_description_privacy"
            android:title="@string/pref_title_privacy" />

        <!--com.jenzz.materialpreference.Preference
            android:key="app_faq"
            android:summary="@string/pref_description_faq"
            android:title="@string/pref_title_faq"
            android:enabled="false" / -->

    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory
        android:icon="@android:drawable/ic_dialog_info"
        android:summary="Gestisci i tuoi dati in tutta tranquillita"
        android:title="@string/pref_header_user">

        <com.jenzz.materialpreference.Preference
            android:key="user_logout"
            android:summary="@string/pref_description_logout"
            android:title="@string/pref_title_logout" />

    </com.jenzz.materialpreference.PreferenceCategory>


    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/pref_header_info">
        <com.jenzz.materialpreference.Preference
            android:key="third_part_library"
            android:summary="@string/preference_summary"
            android:title="@string/preference_library">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="it.acea.android.socialwfm.app.ui.ThirdPartActivity"
                android:targetPackage="it.acea.android.socialwfm" />
        </com.jenzz.materialpreference.Preference>


        <com.jenzz.materialpreference.Preference
            android:key="version"
            android:title="@string/pref_title_version" />
    </com.jenzz.materialpreference.PreferenceCategory>

</PreferenceScreen>